NEXT
 - Retrieve all custom fields
 - Added backlog to custom fields

1.0002 - 2013-09-12
 - Prevent tests running under smoke test from prompting.

1.0001 - 2013-08-07
 - Added dependency list
 - Added Repository to meta
 - Fix typos in POD

1.0000 - 2013-08-06
 - Rename namespace to match existing WebService::FogBugz dist
 - Add prompting support